--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,19 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
+    // Event Bus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
+    implementation 'com.google.maps.android:android-maps-utils:3.5.2'
+
+    //RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
 }
