--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Viewpager
+    implementation "androidx.viewpager:viewpager:1.0.0"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    // Stepview
+    implementation 'com.shuhart.stepview:stepview:1.5.1'
 }
