--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,24 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".DriverApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ParkedCarDriver">
+        android:theme="@style/Theme.ParkedCarDriver"
+        android:dataExtractionRules="@xml/data_extraction_rules">
+        <activity
+            android:name=".view.auth.AuthActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.utils" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".view.BookingSlot.BookSlotActivity"
             android:exported="false" />
@@ -43,13 +55,8 @@
             android:label="@string/title_activity_request_slot" />
         <activity
             android:name=".view.MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
