date time fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ParkedCarDriver">
         <activity
+            android:name=".view.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.BookingSlot.BookingSlotActivity"
             android:exported="false"
             android:label="@string/title_activity_booking_slot"
