--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ParkedCarDriver">
+        android:theme="@style/Theme.SpiderMan">
         <activity
             android:name=".view.profile.ProfileActivity"
             android:exported="false" />
@@ -27,12 +27,12 @@
             android:name=".view.BookingSlot.BookingSlotActivity"
             android:exported="false"
             android:label="@string/title_activity_booking_slot"
-            android:theme="@style/Theme.ParkedCarDriver" />
-        <activity
-            android:name=".view.Search.AdvanceSearch"
-            android:exported="false"
-            android:label="@string/title_activity_advance_search"
-            android:theme="@style/Theme.ParkedCarDriver" />
+            android:theme="@style/Theme.SpiderMan" />
+<!--        <activity-->
+<!--            android:name=".view.Search.AdvanceSearch"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_advance_search"-->
+<!--            android:theme="@style/Theme.ParkedCarDriver" />-->
         <activity
             android:name=".view.BookingSlot.BookSlotActivity"
             android:exported="false" />
@@ -58,7 +58,7 @@
         <activity
             android:name=".view.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.SpiderMan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -68,7 +68,7 @@
         <activity
             android:name=".view.auth.AuthActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.SpiderMan">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
